# robot

./: README.markdown  generate_keys.py  keys.txt  robot.cabal
Test/: Robot.hs
Test/Robot/: Advanced.hs  Connection.hs  Internal.hs  Types.hs
Test/Robot/Internal/: XTest.hs
Test/Robot/Types/: Core.hs  Keys.hs
examples/: GoFast.hs  Jack.hs  RightClick.hs  Vim.hs
